--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="label_anzahl">Anzahl</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="label_farbe">Farbe</string>
+    <string name="label_stoffart">Stoffart</string>
 
 </resources>
