Fixed adding photo issues
Added permission in manifest, renaming of properties in stoff.java (cloth), loading image from database into cloth image, added ImageUtils class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Naehmannsgarn</string>
+    <string name="app_name">Nähmannsgarn</string>
     <string name="title_activity_about">About</string>
     <string name="title_activity_main">Hauptansicht</string>
     <string name="title_activity_stoff">Stoffe</string>
